Dark-mode button is now responsive on small screens(a lot of media queries) + Fixed Back-to-top button responsiveness being on top of the dark-mode button also through a slight adjustment of media query

--- a/public/css/all-fragrances.css
+++ b/public/css/all-fragrances.css
@@ -694,7 +694,7 @@ html {
 
     /* IF THESE ARE REMOVED, the button doesn't find any space and jumps at a random location on the screen! */
     /* Adjust positioning for smaller screens */
-    bottom: 10px; /* Distance from the bottom */
+    bottom: 60px; /* Distance from the bottom */
     right: 10px; /* Distance from the right */
   }
 }
